tests/errors/TypeChecker/TypeErrorPropagation.wys
void main():
    int a = 4
    string b = "7"
    int c = b + a
